# rust-bitcoin-journey

./: .gitignore  .journal.md.un~  README.md  journal.md  journal.md~
exercises/bitcoin-primitives-lab/: .Cargo.toml.un~  Cargo.toml  Cargo.toml~
exercises/bitcoin-primitives-lab/src/: .lib.rs.un~  lib.rs  lib.rs~
exercises/bitcoin-transaction-model/: Cargo.toml
exercises/bitcoin-transaction-model/src/: .main.rs.un~  .trans_lib.rs.un~  main.rs~  trans_lib.rs~
exercises/bitcoin-tx-crate/: Cargo.toml
exercises/bitcoin-tx-crate/src/: main.rs  tx_lib.rs
exercises/bitcoin_rpc_response/: Cargo.toml
exercises/bitcoin_rpc_response/src/: main.rs
exercises/combining_enums_and_structs/: Cargo.toml
exercises/combining_enums_and_structs/src/: .combo.rs.un~  .main.rs.un~  combo.rs  combo.rs~  main.rs~
exercises/introduction_to_structs/src/: lib.rs~  (+7 more)
exercises/introduction_to_structs_02/: Cargo.toml
exercises/option-result-02/: Cargo.toml
exercises/option_intro_000/: Cargo.toml
exercises/option_result_01/: Cargo.toml
exercises/option_result_intro/: Cargo.toml
exercises/ownership_001/: .README.md.un~  .exercise.rs.un~  Cargo.toml  README.md  exercise.rs~
exercises/serde_attributes_intro/: Cargo.toml
exercises/serde_crate_into/: Cargo.toml
exercises/simple_enum_and_pattern_matching/: Cargo.toml
exercises/simple_enum_and_vectors/: Cargo.toml
notes/: .bitcoin-transaction-model.md.un~  .building-rust-bitcoin.md.un~  .primitives_and_visibility.md.un~  bitcoin-transaction-model.md  building-rust-bitcoin.md  primitives_and_visibility.md  result_option.md
(+26 files in other folders)
